--- a/app/public/css/bootstrap.css
+++ b/app/public/css/bootstrap.css
@@ -2021,7 +2021,7 @@ pre code {
     margin-left: 100%;
   }
   .col-lg-offset-11 {
-    margin-left: 91.66666667%;
+    margin-left: 96666667%;
   }
   .col-lg-offset-10 {
     margin-left: 83.33333333%;
